fix responsive design bugs in css around grip gap and userpin

--- a/prompt_planning_poker_frontend/src/App.css
+++ b/prompt_planning_poker_frontend/src/App.css
@@ -37,7 +37,6 @@
   display: grid;
   grid-template-columns: 5fr 5fr;
   grid-template-rows: 1fr;
-  column-gap: 25px;
 
 }
 
@@ -82,6 +81,7 @@
   justify-content: center;
   grid-area: 1 / 2 / 2 / 3;
   text-align: left;
+  padding-left: 25px;
 }
 
 #intro-buttons{
@@ -377,7 +377,7 @@ nav div {
 }
 
 .login{
-  width: 50px;
+  width: 200px;
 }
 .form-input {
   margin: 50px auto;
